<resources>
    <string name="app_name">Cards</string>

    <string name="button_label_view_cards">View Cards</string>
    <string name="button_label_new_card_set">New Cards</string>

    <string name="new_cards_name_label">New Cards Name:</string>
    <string name="new_cards_name_default">Enter New Name Here</string>

    <string name="button_label_cancel">Cancel</string>
    <string name="button_label_next">Next</string>

    <string name="warning_enter_not_empty_name">Enter new cards name please.</string>

    <string name="button_label_add">Add</string>
    <string name="button_label_remove">Remove</string>
    <string name="button_label_refresh">Refresh</string>

    <string name="front_side_content_label">Front side:</string>
    <string name="front_side_content_hint">Type card\'s front side content here</string>
    <string name="back_side_content_label">Back side:</string>
    <string name="back_side_content_hint">Type card\'s back side content here</string>
    <string name="type_not_empty_content">Type not empty content</string>
    <string name="button_label_done">Done</string>
    <string name="button_label_edit">Edit</string>

    <string name="alert_title_remove">Remove</string>
    <string name="alert_question_remove_card">Are you sure you want to remove card?</string>
    <string name="button_label_cards">Cards</string>
</resources>
