<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gmail.sgrimailo.cards.CardDetailsActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/front_side_content_label"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="92dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <EditText
        android:id="@+id/edtFrontSideContent"
        android:layout_width="0dp"
        android:layout_height="113dp"
        android:ems="10"
        android:hint="@string/front_side_content_hint"
        android:inputType="textMultiLine"
        android:layout_marginRight="15dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.0"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_side_content_label"
        android:layout_marginStart="16dp"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@+id/edtFrontSideContent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <EditText
        android:id="@+id/edtBackSideContent"
        android:layout_width="0dp"
        android:layout_height="106dp"
        android:ems="10"
        android:hint="@string/back_side_content_hint"
        android:inputType="textMultiLine"
        android:layout_marginRight="15dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="19dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/btnDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onDoneButtonClick"
        android:text="@string/button_label_done"
        android:layout_marginEnd="16dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="16dp" />

</android.support.constraint.ConstraintLayout>
